app/assets/stylesheets/campaigns.css
/* ... */
.campaign-content {
    min-height: 250px;
    padding: 15px 20px;
}

.campaign-create-wrapper {
    margin: 20px;
    background-color: rgba(255, 255, 255, 1);
    -webkit-box-shadow: 0 0 2px #999999;
    -moz-box-shadow: 0 0 2px #999999;
    box-shadow: 0 0 2px #999999;
    padding: 25px;
}

.campaign-influencer-picture {
    border-radius: 50%;
    border: 4px solid #cdcdcd;
    display: block;
    margin: 0 auto;
    width: 100px;
    height: 100px;
}

.campaign-create-wrapper .influencer-address {
    font-size: 12px;
}

.btn-message{
    background-color: #f8c102;
    margin-top: 17%;
    width: 138px;
    height: 38px;
    display: block;
    color: #FFFFFF;
}

.influencer-title {
    font-size: 13px;
}

.influencer-profile-info{
    padding: 28px 75px 34px 0;
    width: 100%;
}

.social-account-tab-content {
    border: 1px solid #ddd ;
    border-top: none;
    padding-top: 35px;
    padding-right: 30px;
    padding-bottom: 20px;
    margin-bottom: 20px;
    overflow: hidden;
}

.social-account-tabs .social-account-nav-tabs a {
    color: #696969;
}

.social-account-tabs .social-account-nav-tabs li.active .social-account-fa-edit {
    color: #3c8dbc;
}

.social-account-fa-edit {
    font-size: 1.5em;
    padding-right: 5px;
}

.social-account-tab-content label {
    padding-right: 15px;
}

.social-account-tab-content input:not([type=radio]), .social-account-tab-content select {
    width: 52%;
    display: inline;
    margin: 5px;
}

.text-pink   {
    font-size: 13px;
    color: #ff305a;
    font-weight: 600;
    padding: 20px 0;
}

.text-headline-form, .payment-form {
    padding-left: 35px;
    padding-top: 10px;
}

.text-headline-form input, .text-headline-form textarea {
    width: 70%;
    margin-top: 10px;
    margin-bottom: 10px;
    padding: 5px;
}

.text-headline-form textarea {
    resize: none;
}

.type-of-post {
    background-color: #ffffff;
    padding: 3px;
}

.payment-form select {
    background-color: #ffffff;
    padding: 3px;
    margin: 10px 0;
    width: 108px;
}

.payment-form input {
    margin: 10px 0;
    padding: 5px;

}

.payment-form .card-number {
    width: 220px;
}

.payment-form .card-holder-name {
    width: 270px;
}

.campaign-create-wrapper .btn-book-now {
    background-color: #e13f3c;
    color: white;
    margin-top: 5%;
    margin-left: 10px;
    padding: 8px 28px;
    font-weight: 600;
}

.campaign-create-wrapper .grey-color {
    background-color: #999999;
}

#error_explanation {
    width: 450px;
    border: 2px solid #ff3a38;
    padding: 7px;
    margin-bottom: 20px;
    background-color: #f0f0f0;
}

#error_explanation h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 14px;
    margin: -7px -7px 0 -7px;
    background-color: #ff3a38;
    color: #fff;
}

#error_explanation ul li {
    font-size: 13px;
    list-style: square;
    padding-top: 5px;
}

.campaign-date {
    width: 280px;
    background-color: #dbd9da;
    padding: 10px 20px;
    margin: 20px 0 0 7px;
}

.social-account-tab-content  input#campaign_cost{
    width: 150px;
}

.download-campaign {
    text-align: center;
    margin: 20px 0;
    padding-top: 20px;
}

.info-box-custom {
    border-top: 1px solid #eaeaea;
}

.btn-download-campaign {
    background-color:  #ff305a;
    color: white;
    width: 90%;
    font-size: 13px;
    font-weight: 600;
}

.campaign-view {
    margin-bottom: 20px;
}

.campaign-view label {
    padding-left: 50px;
    padding-right: 20px;
}

.campaign-view select {
    padding: 5px;
    background-color: white;
    width: 60%;
}

.btn-campaign-view {
    color: white;
    padding: 5px 40px;
    margin-left: 15px;
    background-color: #f8c102;
    font-weight: 600;
    font-size: 13px;
}

.squaredFour input {
    cursor: pointer;
    position: relative;
    width: 20px;
    height: 20px;
    border-radius: 2px;
    background: #cfcfcf;
    background: -webkit-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    background: -moz-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    background: -o-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    background: -ms-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#b3bead',GradientType=0 );
}

.display-none {
    display: none;
}

/* set activity Modals' Css */

.vertical-align-middle {
    vertical-align: middle;
}

.fb-activity-img {
    height: 35px;
}

.fb-activity-row {
    height: 45px;
    padding-top: 5px;
    padding-left: 10px;
}

.add-another-account {
    margin-bottom: 15px;
}

.fb-activity-row:nth-child(odd) {
    background-color: #ffffff;
}

.fb-activity-row:nth-child(even) {
    background-color: #f6f6f6;
}

.fb-activity-post {
    width: 350px;
    padding-left: 10px;
}

@media
only screen and (max-width: 420px) {
    .brand-campaign-content {
        padding: 10px 0px;
    }

    .campaign-nav-tabs {
        font-size: 13px;
    }

    .btn-download-campaign {
        width: 96%;
    }

    .campaign-view label, .campaign-view select, .campaign-view button {
        width: 100%;
        text-align: center;
        margin-top: 10px;
    }

    .campaign-view label {
        padding: 0;
    }

    .campaign-view button {
        margin-left: 0;
    }
}

.btn-export:hover, .btn-campaign-view {
    color: white;
    background-color: #f1b242;
}

